--- a/colab-notebooks-examples/search/00-quick-start.ipynb
+++ b/colab-notebooks-examples/search/00-quick-start.ipynb
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "id": "ffc5fa6f",
       "metadata": {
         "id": "ffc5fa6f",
@@ -101,14 +101,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 30,
       "id": "f38e0397",
       "metadata": {
         "id": "f38e0397",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2c98adc6-92f1-4ddd-a471-83617c9d6562"
+        "outputId": "ad6df489-d242-4229-a42a-39c5ca19d124"
       },
       "outputs": [
         {
@@ -156,12 +156,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "id": "25c618eb",
       "metadata": {
-        "id": "25c618eb"
+        "id": "25c618eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "30a6ba5b-5109-4457-ddfe-5633a077ca9b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'name': 'instance-0000000000', 'cluster_name': '1a56ad21587c44d3930932eb9fa1d8e8', 'cluster_uuid': 'gX4zlwtlR4qhZpp1SPm4Yg', 'version': {'number': '8.8.2', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '98e1271edf932a480e4262a471281f1ee295ce6b', 'build_date': '2023-06-26T05:16:16.196344851Z', 'build_snapshot': False, 'lucene_version': '9.6.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'}\n"
+          ]
+        }
+      ],
       "source": [
         "print(client.info())"
       ]
@@ -262,6 +274,42 @@
     },
     {
       "cell_type": "markdown",
+      "id": "cd8b03e0",
+      "metadata": {
+        "id": "cd8b03e0"
+      },
+      "source": [
+        "## Aside: Pretty printing Elasticsearch responses\n",
+        "\n",
+        "Your API calls will return hard-to-read nested JSON.\n",
+        "We'll create a little function called `pretty_response` to return nice, human-readable outputs from our examples."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 40,
+      "id": "f12ce2c9",
+      "metadata": {
+        "id": "f12ce2c9"
+      },
+      "outputs": [],
+      "source": [
+        "def pretty_response(response):\n",
+        "    for hit in response['hits']['hits']:\n",
+        "        id = hit['_id']\n",
+        "        publication_date = hit['_source']['publish_date']\n",
+        "        score = hit['_score']\n",
+        "        title = hit['_source']['title']\n",
+        "        summary = hit['_source']['summary']\n",
+        "        publisher = hit[\"_source\"][\"publisher\"]\n",
+        "        num_reviews = hit[\"_source\"][\"num_reviews\"]\n",
+        "        authors = hit[\"_source\"][\"authors\"]\n",
+        "        pretty_output = (f\"\\nID: {id}\\nPublication date: {publication_date}\\nTitle: {title}\\nSummary: {summary}\\nPublisher: {publisher}\\nReviews: {num_reviews}\\nAuthors: {authors}\\nScore: {score}\")\n",
+        "        print(pretty_output)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "39bdefe0",
       "metadata": {
         "id": "39bdefe0"
@@ -274,14 +322,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 41,
       "id": "Df7hwcIjYwMT",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Df7hwcIjYwMT",
-        "outputId": "a82a791f-362c-4ae4-abbd-b03306b9d711"
+        "outputId": "e63884d7-d4a5-4f5d-ea43-fc2f0793f040"
       },
       "outputs": [
         {
@@ -289,7 +337,7 @@
           "name": "stdout",
           "text": [
             "\n",
-            "ID: S-m5P4kB-GB5Evg6PXVG\n",
+            "ID: OOlWP4kB-GB5Evg6zHVx\n",
             "Publication date: 2008-05-15\n",
             "Title: JavaScript: The Good Parts\n",
             "Summary: A deep dive into the parts of JavaScript that are essential to writing maintainable code\n",
@@ -298,7 +346,7 @@
             "Authors: ['douglas crockford']\n",
             "Score: 0.8075247\n",
             "\n",
-            "ID: R-m5P4kB-GB5Evg6PXVG\n",
+            "ID: NOlWP4kB-GB5Evg6zHVx\n",
             "Publication date: 2015-03-27\n",
             "Title: You Don't Know JS: Up & Going\n",
             "Summary: Introduction to JavaScript and programming as a whole\n",
@@ -307,7 +355,7 @@
             "Authors: ['kyle simpson']\n",
             "Score: 0.6946182\n",
             "\n",
-            "ID: SOm5P4kB-GB5Evg6PXVG\n",
+            "ID: NelWP4kB-GB5Evg6zHVx\n",
             "Publication date: 2018-12-04\n",
             "Title: Eloquent JavaScript\n",
             "Summary: A modern introduction to programming\n",
@@ -316,7 +364,7 @@
             "Authors: ['marijn haverbeke']\n",
             "Score: 0.66179085\n",
             "\n",
-            "ID: Q-m5P4kB-GB5Evg6PXVG\n",
+            "ID: MOlWP4kB-GB5Evg6zHVx\n",
             "Publication date: 2019-10-29\n",
             "Title: The Pragmatic Programmer: Your Journey to Mastery\n",
             "Summary: A guide to pragmatic programming for software engineers and developers\n",
@@ -325,7 +373,7 @@
             "Authors: ['andrew hunt', 'david thomas']\n",
             "Score: 0.61159486\n",
             "\n",
-            "ID: TOm5P4kB-GB5Evg6PXVG\n",
+            "ID: OelWP4kB-GB5Evg6zHVx\n",
             "Publication date: 2012-06-27\n",
             "Title: Introduction to the Theory of Computation\n",
             "Summary: Introduction to the theory of computation and complexity theory\n",
@@ -334,7 +382,7 @@
             "Authors: ['michael sipser']\n",
             "Score: 0.58697784\n",
             "\n",
-            "ID: Sum5P4kB-GB5Evg6PXVG\n",
+            "ID: N-lWP4kB-GB5Evg6zHVx\n",
             "Publication date: 2011-05-13\n",
             "Title: The Clean Coder: A Code of Conduct for Professional Programmers\n",
             "Summary: A guide to professional conduct in the field of software engineering\n",
@@ -343,7 +391,7 @@
             "Authors: ['robert c. martin']\n",
             "Score: 0.57042736\n",
             "\n",
-            "ID: Sem5P4kB-GB5Evg6PXVG\n",
+            "ID: NulWP4kB-GB5Evg6zHVx\n",
             "Publication date: 1994-10-31\n",
             "Title: Design Patterns: Elements of Reusable Object-Oriented Software\n",
             "Summary: Guide to design patterns that can be used in any object-oriented language\n",
@@ -352,7 +400,7 @@
             "Authors: ['erich gamma', 'richard helm', 'ralph johnson', 'john vlissides']\n",
             "Score: 0.56175697\n",
             "\n",
-            "ID: Rum5P4kB-GB5Evg6PXVG\n",
+            "ID: M-lWP4kB-GB5Evg6zHVx\n",
             "Publication date: 2008-08-11\n",
             "Title: Clean Code: A Handbook of Agile Software Craftsmanship\n",
             "Summary: A guide to writing code that is easy to read, understand and maintain\n",
@@ -361,7 +409,7 @@
             "Authors: ['robert c. martin']\n",
             "Score: 0.55407417\n",
             "\n",
-            "ID: Rem5P4kB-GB5Evg6PXVG\n",
+            "ID: MulWP4kB-GB5Evg6zHVx\n",
             "Publication date: 2020-04-06\n",
             "Title: Artificial Intelligence: A Modern Approach\n",
             "Summary: Comprehensive introduction to the theory and practice of artificial intelligence\n",
@@ -370,7 +418,7 @@
             "Authors: ['stuart russell', 'peter norvig']\n",
             "Score: 0.5461982\n",
             "\n",
-            "ID: ROm5P4kB-GB5Evg6PXVG\n",
+            "ID: MelWP4kB-GB5Evg6zHVx\n",
             "Publication date: 2019-05-03\n",
             "Title: Python Crash Course\n",
             "Summary: A fast-paced, no-nonsense guide to programming in Python\n",
@@ -384,7 +432,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-60-f36d0b63ab7a>:1: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+            "<ipython-input-41-f6998147c0ac>:1: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
             "  response = client.search(index=\"book_index\", body={\n"
           ]
         }
@@ -398,20 +446,6 @@
         "      \"num_candidates\": 100\n",
         "    }\n",
         "})\n",
-        "\n",
-        "# a helper function to return nice human-readable outputs from our following examples\n",
-        "def pretty_response(response):\n",
-        "    for hit in response['hits']['hits']:\n",
-        "        id = hit['_id']\n",
-        "        publication_date = hit['_source']['publish_date']\n",
-        "        score = hit['_score']\n",
-        "        title = hit['_source']['title']\n",
-        "        summary = hit['_source']['summary']\n",
-        "        publisher = hit[\"_source\"][\"publisher\"]\n",
-        "        num_reviews = hit[\"_source\"][\"num_reviews\"]\n",
-        "        authors = hit[\"_source\"][\"authors\"]\n",
-        "        pretty_output = (f\"\\nID: {id}\\nPublication date: {publication_date}\\nTitle: {title}\\nSummary: {summary}\\nPublisher: {publisher}\\nReviews: {num_reviews}\\nAuthors: {authors}\\nScore: {score}\")\n",
-        "        print(pretty_output)\n",
         "\n",
         "pretty_response(response)"
       ]
@@ -470,53 +504,16 @@
         "pretty_response(response)"
       ],
       "metadata": {
-        "id": "WoE0yTchfj3A",
-        "outputId": "4c1d1b6a-a24c-48c5-cc7e-9d16c6cdecda",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "WoE0yTchfj3A"
       },
       "id": "WoE0yTchfj3A",
-      "execution_count": 61,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "ID: Q-m5P4kB-GB5Evg6PXVG\n",
-            "Publication date: 2019-10-29\n",
-            "Title: The Pragmatic Programmer: Your Journey to Mastery\n",
-            "Summary: A guide to pragmatic programming for software engineers and developers\n",
-            "Publisher: addison-wesley\n",
-            "Reviews: 30\n",
-            "Authors: ['andrew hunt', 'david thomas']\n",
-            "Score: 0.61159486\n",
-            "\n",
-            "ID: Sem5P4kB-GB5Evg6PXVG\n",
-            "Publication date: 1994-10-31\n",
-            "Title: Design Patterns: Elements of Reusable Object-Oriented Software\n",
-            "Summary: Guide to design patterns that can be used in any object-oriented language\n",
-            "Publisher: addison-wesley\n",
-            "Reviews: 45\n",
-            "Authors: ['erich gamma', 'richard helm', 'ralph johnson', 'john vlissides']\n",
-            "Score: 0.56175697\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-61-3473d0ee75f9>:1: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
-            "  response = client.search(index=\"book_index\", body={\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "### Example: Optional Filtering\n",
+        "### Example: Advanced Filtering\n",
         "\n",
         "TODO: Help the developer understand more about the different types of filtering they can do.\n",
         "\n",
@@ -563,17 +560,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fcDfiJC9g6AX",
-        "outputId": "ea4120a5-9ef3-4387-9fa4-09c3e2e25440"
+        "outputId": "0909515a-5b94-4863-94c6-e67015baeadf"
       },
       "id": "fcDfiJC9g6AX",
-      "execution_count": 62,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            "ID: Q-m5P4kB-GB5Evg6PXVG\n",
+            "ID: MOlWP4kB-GB5Evg6zHVx\n",
             "Publication date: 2019-10-29\n",
             "Title: The Pragmatic Programmer: Your Journey to Mastery\n",
             "Summary: A guide to pragmatic programming for software engineers and developers\n",
@@ -582,7 +579,7 @@
             "Authors: ['andrew hunt', 'david thomas']\n",
             "Score: 0.61159486\n",
             "\n",
-            "ID: Sum5P4kB-GB5Evg6PXVG\n",
+            "ID: N-lWP4kB-GB5Evg6zHVx\n",
             "Publication date: 2011-05-13\n",
             "Title: The Clean Coder: A Code of Conduct for Professional Programmers\n",
             "Summary: A guide to professional conduct in the field of software engineering\n",
@@ -591,7 +588,7 @@
             "Authors: ['robert c. martin']\n",
             "Score: 0.57042736\n",
             "\n",
-            "ID: Sem5P4kB-GB5Evg6PXVG\n",
+            "ID: NulWP4kB-GB5Evg6zHVx\n",
             "Publication date: 1994-10-31\n",
             "Title: Design Patterns: Elements of Reusable Object-Oriented Software\n",
             "Summary: Guide to design patterns that can be used in any object-oriented language\n",
@@ -600,7 +597,7 @@
             "Authors: ['erich gamma', 'richard helm', 'ralph johnson', 'john vlissides']\n",
             "Score: 0.56175697\n",
             "\n",
-            "ID: Rum5P4kB-GB5Evg6PXVG\n",
+            "ID: M-lWP4kB-GB5Evg6zHVx\n",
             "Publication date: 2008-08-11\n",
             "Title: Clean Code: A Handbook of Agile Software Craftsmanship\n",
             "Summary: A guide to writing code that is easy to read, understand and maintain\n",
@@ -614,7 +611,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-62-d2630d6c4fcd>:1: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+            "<ipython-input-43-9b650e64895f>:1: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
             "  response = client.search(index=\"book_index\", body={\n"
           ]
         }
@@ -665,17 +662,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1BwZ-yjli7xA",
-        "outputId": "74c69581-00a1-4b7b-fa84-9a3f96ae7a9b"
+        "outputId": "26eea86c-5cda-42d0-ba1e-2904e2b7865a"
       },
       "id": "1BwZ-yjli7xA",
-      "execution_count": 63,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            "ID: ROm5P4kB-GB5Evg6PXVG\n",
+            "ID: MelWP4kB-GB5Evg6zHVx\n",
             "Publication date: 2019-05-03\n",
             "Title: Python Crash Course\n",
             "Summary: A fast-paced, no-nonsense guide to programming in Python\n",
@@ -684,7 +681,7 @@
             "Authors: ['eric matthes']\n",
             "Score: None\n",
             "\n",
-            "ID: Q-m5P4kB-GB5Evg6PXVG\n",
+            "ID: MOlWP4kB-GB5Evg6zHVx\n",
             "Publication date: 2019-10-29\n",
             "Title: The Pragmatic Programmer: Your Journey to Mastery\n",
             "Summary: A guide to pragmatic programming for software engineers and developers\n",
@@ -693,7 +690,7 @@
             "Authors: ['andrew hunt', 'david thomas']\n",
             "Score: None\n",
             "\n",
-            "ID: TOm5P4kB-GB5Evg6PXVG\n",
+            "ID: OelWP4kB-GB5Evg6zHVx\n",
             "Publication date: 2012-06-27\n",
             "Title: Introduction to the Theory of Computation\n",
             "Summary: Introduction to the theory of computation and complexity theory\n",
@@ -702,7 +699,7 @@
             "Authors: ['michael sipser']\n",
             "Score: None\n",
             "\n",
-            "ID: Sum5P4kB-GB5Evg6PXVG\n",
+            "ID: N-lWP4kB-GB5Evg6zHVx\n",
             "Publication date: 2011-05-13\n",
             "Title: The Clean Coder: A Code of Conduct for Professional Programmers\n",
             "Summary: A guide to professional conduct in the field of software engineering\n",
@@ -711,7 +708,7 @@
             "Authors: ['robert c. martin']\n",
             "Score: None\n",
             "\n",
-            "ID: Rem5P4kB-GB5Evg6PXVG\n",
+            "ID: MulWP4kB-GB5Evg6zHVx\n",
             "Publication date: 2020-04-06\n",
             "Title: Artificial Intelligence: A Modern Approach\n",
             "Summary: Comprehensive introduction to the theory and practice of artificial intelligence\n",
@@ -725,26 +722,11 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-63-3861c4af16a3>:1: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+            "<ipython-input-51-3861c4af16a3>:1: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
             "  response = client.search(index=\"book_index\", body={\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Next Steps\n",
-        "\n",
-        "Now that you have learned the basics of Elasticsearch's query features, you can further explore additional features such as:\n",
-        "\n",
-        "- [ELSER](fff)\n",
-        "- [Faceting with aggregations](fff)\n"
-      ],
-      "metadata": {
-        "id": "xGSMSICZu67I"
-      },
-      "id": "xGSMSICZu67I"
     },
     {
       "cell_type": "code",
@@ -752,11 +734,26 @@
         "client.indices.delete(index=\"book_index\")"
       ],
       "metadata": {
-        "id": "_OAahfg-tqrf"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_OAahfg-tqrf",
+        "outputId": "d8f81ba4-cdc9-4e30-edf7-6d5bb16920eb"
       },
       "id": "_OAahfg-tqrf",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "ObjectApiResponse({'acknowledged': True})"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
     }
   ],
   "metadata": {
