--- a/colab-notebooks-examples/search/00-quick-start.ipynb
+++ b/colab-notebooks-examples/search/00-quick-start.ipynb
@@ -255,7 +255,7 @@
         "import json\n",
         "from urllib.request import urlopen\n",
         "\n",
-        "url = \"https://raw.githubusercontent.com/joemcelroy/elasticsearch-labs/notebooks-guides/colab-notebooks-examples/search/data.json\"\n",
+        "url = \"https://raw.githubusercontent.com/elastic/elasticsearch-labs/notebooks-guides/colab-notebooks-examples/search/data.json\"\n",
         "response = urlopen(url)\n",
         "books = json.loads(response.read())\n",
         "\n",
@@ -311,7 +311,7 @@
         "id": "39bdefe0"
       },
       "source": [
-        "## Making wueries\n",
+        "## Making queries\n",
         "\n",
         "Now that we have indexed the books, we want to perform a semantic search for books that are similar to a given query.\n",
         "We embed the query and perform a search."
